// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Satellite component renders correctly with alternate props 1`] = `
<div
  className="satellite satellite-2-3"
  onClick={undefined}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 205, 155, 0.5)",
      "boxShadow": "0 0 1rem rgba(255, 205, 155, 0.5)",
      "color": "#000000",
    }
  }
>
  <p
    className="satellite-label"
  />
</div>
`;

exports[`Satellite component renders correctly with default props 1`] = `
<div
  className="satellite satellite-1-1"
  onClick={undefined}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  style={
    Object {
      "backgroundColor": undefined,
      "boxShadow": undefined,
      "color": "#FFFFFF",
    }
  }
>
  <p
    className="satellite-label"
  />
</div>
`;
